@@ -5,4 +5,3 @@ copyright_holder  = David Golden
 
 [@DAGOLDEN]
 git_remote = github
-
