@@ -8,8 +8,14 @@ use Pod::Weaver::Config::Assembler;
 # Dependencies
 use Pod::Weaver::Plugin::WikiDoc ();
 use Pod::Elemental::Transformer::List 0.101620 ();
+use Pod::Weaver::Section::Support 1.001 ();
 
 sub _exp { Pod::Weaver::Config::Assembler->expand_package($_[0]) }
+
+my $repo_intro = <<'END';
+This is open source software.  The code repository is available for
+public review and contribution under the terms of the license.
+END
 
 sub mvp_bundle_config {
   my @plugins;
@@ -39,6 +45,15 @@ sub mvp_bundle_config {
   push @plugins, (
     [ '@DAGOLDEN/Leftovers', _exp('Leftovers'), {} ],
     [ '@DAGOLDEN/postlude',  _exp('Region'),    { region_name => 'postlude' } ],
+    [ '@DAGOLDEN/Support',   _exp('Support'),
+      {
+        perldoc => 0,
+        websites => 'none',
+        bugs => 'metadata',
+        repository_link => 'both',
+        repository_content => $repo_intro
+      }
+    ],
     [ '@DAGOLDEN/Authors',   _exp('Authors'),   {} ],
     [ '@DAGOLDEN/Legal',     _exp('Legal'),     {} ],
     [ '@DAGOLDEN/List',      _exp('-Transformer'), { 'transformer' => 'List' } ],
@@ -50,3 +65,41 @@ sub mvp_bundle_config {
 1;
 
 =for Pod::Coverage mvp_bundle_config
+
+=begin wikidoc
+
+= DESCRIPTION
+
+This is a [Pod::Weaver] PluginBundle.  It is roughly equivalent to the
+following weaver.ini:
+
+  [-WikiDoc]
+
+  [@Default]
+
+  [Support]
+  perldoc = 0
+  websites = none
+  bugs = metadata
+  repository_link = both
+  repository_content = ...stuff...
+
+  [-Transformer]
+  transfomer = List
+
+= USAGE
+
+This PluginBundle is used automatically with the C<@DAGOLDEN> [Dist::Zilla]
+plugin bundle.
+
+= SEE ALSO
+
+* [Pod::Weaver]
+* [Pod::Weaver::Plugin::WikiDoc]
+* [Pod::Elemental::Transformer::List]
+* [Dist::Zilla::Plugin::PodWeaver]
+
+=end wikidoc
+
+=cut
+
