@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - added Pod::Weaver::Section::Support and Bugtracker to the mix
+
 0.015     2011-01-23 17:11:20 EST5EDT
 
     - updated prereqs, including missing Pod::Elemental::Transformer::List
